# app/models/message.rb
@@ -1,5 +1,7 @@
 class Message < ApplicationRecord
   belongs_to :room
+  has_many :message_reactions, dependent: :destroy
+  has_many :reactions, dependent: :destroy, through: :message_reactions
   validates :room_id, presence: true
   validates :user_id, presence: true
   validates :user_name, presence: true
