# app/models/message_reaction.rb
@@ -1,0 +1,4 @@
+class MessageReaction < ApplicationRecord
+  belongs_to :message
+  belongs_to :reaction
+end
